--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,13 @@ jobs:
         with:
           java-version: 11
           distribution: 'adopt'
+          cache: gradle
       - uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - run: ./gradlew assemble
+      - name: Get gradle.properties version
+        run: |
+          echo "::set-output name=TAG_VERSION::$(grep 'version' gradle.properties | awk -F '=' '/version/ {print $2}')"
+        id: version
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -58,9 +63,13 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: github.com/lawkai
-          IMAGE_TAG: ${{ github.sha }}
+          ECR_REPOSITORY: http4k-template
+          IMAGE_TAG: ${{ steps.version.outputs.TAG_VERSION }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      - name: Cleanup Gradle Cache
+        run: |
+          rm -f ~/.gradle/caches/modules-2/modules-2.lock
+          rm -f ~/.gradle/caches/modules-2/gc.properties
 
