--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,11 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REPOSITORY: http4k-template
-          IMAGE_TAG: latest,${{ github.sha }},${{ steps.version.outputs.TAG_VERSION }}
+          VERSION_TAG: ${{ steps.version.outputs.TAG_VERSION }}
+          SHA_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$VERSION_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$SHA_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
       - name: Cleanup Gradle Cache
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
