--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           semantic_version: 17.1.1
           extra_plugins: |
             @semantic-release/changelog
-            @semantic-release/git
+            @semantic-release/git@9.0.1
             @google/semantic-release-replace-plugin
   dockerise:
     needs: release
