--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,27 +4,21 @@ on:
     branches:
       - main
 jobs:
-  verify:
+  build_and_publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions/setup-java@v2
+      - name: Checkout Source Code
+        uses: actions/checkout@v2.3.4
+      - name: Setup OpenJDK
+        uses: actions/setup-java@v2
         with:
           java-version: 11
           distribution: 'adopt'
           cache: gradle
-      - uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Validate Gradle wrapper checksum
+        uses: gradle/wrapper-validation-action@v1
       - name: Run Unit Tests
         run: ./gradlew check
-      - name: Cleanup Gradle Cache
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
-  release:
-    needs: verify
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.3.4
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         env:
@@ -35,22 +29,11 @@ jobs:
             @semantic-release/changelog@6
             @semantic-release/git@10
             @google/semantic-release-replace-plugin
-  dockerise:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions/setup-java@v2
-        with:
-          java-version: 11
-          distribution: 'adopt'
-          cache: gradle
-      - uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - run: ./gradlew assemble
-      - name: Get gradle.properties version
+      - name: Assemble artifact
+        run: ./gradlew assemble
+      - name: Get application version from gradle.properties
         run: |
           echo "::set-output name=TAG_VERSION::$(grep 'version' gradle.properties | awk -F '=' '/version/ {print $2}')"
-        id: version
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -63,11 +46,11 @@ jobs:
       - name: Create ECR if not exist
         uses: int128/create-ecr-repository-action@v1
         with:
-          repository: http4k-template
+          repository: ${{ github.repository }}
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: http4k-template
+          ECR_REPOSITORY: ${{ github.repository }}
           VERSION_TAG: ${{ steps.version.outputs.TAG_VERSION }}
           SHA_TAG: ${{ github.sha }}
         run: |
@@ -77,4 +60,3 @@ jobs:
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
           rm -f ~/.gradle/caches/modules-2/gc.properties
-
