fix: fixing typo in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
             @google/semantic-release-replace-plugin
     outputs:
       is_new_release: ${{ steps.semantic.outputs.new_release_published }}
-      new_release_version: ${{ steps.semantic.outputs.new_release_vesion }}
+      new_release_version: ${{ steps.semantic.outputs.new_release_version }}
   release:
     runs-on: ubuntu-latest
     needs: verify
