--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [verify, release]
     steps:
+      - name: Checkout Source Code
+        uses: actions/checkout@v2
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
